--- a/src/styles/atoms/icon/icon.module.css
+++ b/src/styles/atoms/icon/icon.module.css
@@ -5,8 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     padding: 8px;
     border-radius: 50%;
+    position: relative;
+    bottom: 20px;
 }
