--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
+  background: rgb(239,241,254);
+  background: linear-gradient(0deg, rgba(239,241,254,1) 46%, rgba(255,255,255,1) 83%);
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* height: 100vh; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
