--- a/src/styles/molecules/card-info/card-info.module.css
+++ b/src/styles/molecules/card-info/card-info.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     padding: 8px;
-    background-color: #ebebeb;
+    background-color: #fff;
     border-radius: 10px;
     box-shadow: -3px 1px 19px -3px rgba(0,0,0,0.75);
     -webkit-box-shadow: -3px 1px 19px -3px rgba(0,0,0,0.75);
