--- a/src/styles/organisms/logo-section/logo-section.module.css
+++ b/src/styles/organisms/logo-section/logo-section.module.css
@@ -25,11 +25,21 @@
 }
 
 .cardContainer {
-    width: 290px;
+    width: 320px;
     display: flex;
     flex-direction: column;
     gap: 18px;
     align-items: start;
+}
+
+@media screen and (max-width: 560px) {
+    .cardContainer {
+        width: 290px;
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+        align-items: start;
+    }
 }
 
 .sectionImageBg {
@@ -90,4 +100,12 @@
 .flexEnd {
     display: flex;
     justify-content: flex-end;
+    position: relative;
+    right: 40px;
+}
+
+@media screen and (max-width: 560px) {
+    .flexEnd {
+        right: 0px;
+    }
 }
